# pavucontrolrs

./: Cargo.toml  LICENSE-MIT  README.md
src/: draw.rs  main.rs  selecting_map.rs
src/views/: cards.rs  mod.rs  sink_inputs.rs  sinks.rs  source_outputs.rs  sources.rs
