[package]
name = "pavucontrolrs"
version = "0.1.0"
authors = ["Ike <ike@koeln.ccc.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cursive = { git = "https://github.com/gyscos/cursive" }
libpulse-binding = "2.27.1"
termion = "1.5.3"
tui = "0.6.2"
